# TelegramBot

./: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  go.mod  main.go  main.py  pyproject.toml  requirements.txt
bot/app/controllers/: dispatcher_controller.py
bot/handlers/user/: __init__.py  proxy.py  start.py
bot/keyboards/inline/: user_keyboards.py
config/: settings.py
locales/: en.json  fa.json  fr.json  ru.json  zh.json
