[project]
name = "telegrambot"
version = "0.1.0"
description = "Remnawave Telegram Shop "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocryptopay==0.4.8",
    "aiogram==3.21.0",
    "aiohttp==3.12.14",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "pycountry==23.12.11",
    "pydantic==2.7.1",
    "pydantic-settings>=2.11.0",
    "python-dotenv==1.0.1",
    "sqlalchemy[asyncio]==2.0.29",
    "yookassa==3.5.0",
]
